<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="18">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5.5">

            <TextView
                android:id="@+id/tvNextPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_player"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/dividerRotate"
                app:layout_constraintEnd_toStartOf="@+id/glAnalyzerActivity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glAnalyzerActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <RadioGroup
                android:id="@+id/btngrpNextPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/glAnalyzerActivity"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/dividerRotate" >

                <RadioButton
                    android:id="@+id/btnWhite"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:checked="true"
                    android:fontFamily="@font/averia_serif_libre"
                    android:text="@string/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/btnBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:fontFamily="@font/averia_serif_libre"
                    android:text="@string/black"
                    android:textSize="20sp" />
            </RadioGroup>

            <View
                android:id="@+id/dividerRotate"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/light_black"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvRotate" />

            <TextView
                android:id="@+id/tvRotate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="17sp"
                android:text="@string/rotate_if"
                android:layout_marginBottom="7dp"
                app:layout_constraintBottom_toTopOf="@+id/btnRotate" />

            <ImageButton
                android:id="@+id/btnRotate"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerCrop"
                android:src="@drawable/rotate"
                android:background="#00000000"
                android:layout_marginBottom="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/rotating_arrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <include
            layout="@layout/chessboard"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5" >

            <Button
                android:id="@+id/btnAnalyze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/averia_serif_libre"
                android:text="@string/analyze"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:alpha="0.8"
        android:background="@color/dark_white"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toTopOf="@+id/tvAnalyzing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvAnalyzing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/averia_serif_libre"
                android:text="@string/recognizing"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</FrameLayout>


